--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -4,7 +4,7 @@ version: '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Phaktionz CLI Wiki # 79 char long summary
 description: |
   The Phaktionz CLI Wiki is to bring the ability of getting information 
-  about Phaktionz driectly on your system.
+  about Phaktionz directly on your system.
 
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
@@ -13,6 +13,8 @@ parts:
   phaktionz:
     # See 'snapcraft plugins'
     plugin: dump
-    source: 
+    source: https://github.com/MKProj/Phaktionz-CLI.git
+    source-type: git
 apps: 
-  command: ./ts-pkg/usr/bin/ts-pkg
+  phaktionz:
+    command: ./ts-pkg/usr/bin/ts-pkg
