--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "phaktionz"
 version = "0.4.0"
 authors = ["mustafif0929@gmail.com <mustafif0929@gmail.com>"]
 edition = "2018"
-
+description = "A Command Line Version of the Phaktionz TCG Book"
+license = "MIT"
+doc = "phaktionz.mkproj.com/book/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
