--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "phaktionz"
-version = "0.4.1"
+version = "0.4.2"
 authors = ["mustafif0929@gmail.com <mustafif0929@gmail.com>"]
 edition = "2018"
 description = "A Command Line Version of the Phaktionz TCG Book"
 license = "MIT"
-doc = "phaktionz.mkproj.com/book/"
+documentation = "phaktionz.mkproj.com/book/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
