--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: [ main, stable]
+    branches: [ main, stable, edge, beta]
   pull_request:
     branches: [ main ]
 
