--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,9 @@
 stages:
     - build 
-    - test
 
-build-code-job: 
-    stage: build 
-    script: 
-        - echo "Building Phaktionz CLI"
-        - cargo build --verbose 
-
-    stage: test
-    script: 
-        - echo "Testing Phaktionz CLI"
+rust-build: 
+    stage: build
+    image: rust-latest
+    script:
+        - cargo build --verbose
         - cargo test --verbose
