Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 
 rust-build: 
     stage: build
-    image: rust-latest
+    image: rust:latest
     script:
         - cargo build --verbose
         - cargo test --verbose
